<resources>
    <string name="app_name">Playlist_Maker</string>
    <string name="search_titel" translatable="false">Поиск</string>
    <string name="media_titel" translatable="false">Медиатека</string>
    <string name="settings_titel" translatable="false">Настройки</string>
    <string name="Dark_theme" translatable="false">Тёмная тема</string>
    <string name="Share_the_app" translatable="false">Поделиться приложением</string>
    <string name="Write_to_support" translatable="false">Написать в поддержку</string>
    <string name="User_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="course_link" translatable="false">https://practicum.yandex.ru/profile/android-developer/?from=learn_subscriptions-with-prof-recommendations</string>
    <string name="email_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="name_track" translatable="false">Название трека</string>
    <string name="artist_name" translatable="false">Артист</string>
    <string name="time_track" translatable="false">Время трека</string>
    <string name="you_looking" translatable="false">Вы искали</string>
    <string name="nothing_was_found" translatable="false">Ничего не найдено</string>
    <string name="communication_problems" translatable="false">Проблемы со связью</string>
    <string name="clear_the_history" translatable="false">Очистить историю</string>
    <string name="nothing_found" translatable="false">Ничего не нашлось</string>
    <string name="something_went_wrong" translatable="false">Что-то не так</string>
    <string name="durationSample" translatable="false">00:30</string>
    <string name="durationSample2" translatable="false">00:00</string>
    <string name="title_activity_music_library" translatable="false">Music_Library</string>
    <string name="email_recipient" translatable="false">kronker61@yandex.ru</string>
    <string name="music_library" translatable="false">Медиатека</string>
    <string name="media_library_empty" translatable="false">Ваша медиатека пуста</string>
    <string name="empty_medialists1" translatable="false">Вы не создали</string>
    <string name="empty_medialists2" translatable="false">ни одного плейлиста</string>
    <string name="selected_tracks" translatable="false">Избранные треки</string>
    <string name="playlists" translatable="false">Плейлисты</string>
    <string name="new_playlists" translatable="false">Новый плейлист</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media_library" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="playlist_title" translatable="false">Название*</string>
    <string name="description" translatable="false">Описание</string>
    <string name="playlist_create" translatable="false">Создать</string>
    <string name="dialog_title" translatable="false">Завершить создание плейлиста?</string>
    <string name="dialog_message" translatable="false">Все несохраненные данные будут потеряны
</string>
    <string name="ap_duration" translatable="false">Длительность</string>
    <string name="ap_album" translatable="false">Альбом</string>
    <string name="ap_year" translatable="false">Год</string>
    <string name="ap_genre" translatable="false">Жанр</string>
    <string name="ap_country" translatable="false">Страна</string>
    <string name="playlist_add" translatable="false">Добавить в плейлист</string>
    <string name="track_multiplie" translatable="false">треков</string>
    <string name="track_one" translatable="false">трек</string>
    <string name="track_several" translatable="false">трека</string>
    <string name="added_to_playlist" translatable="false">Трек добавлен</string>
    <string name="already_in_playlist" translatable="false">Трек, уже добавленный в плейлист</string>
    <string name="menu_change" translatable="false">Изменить</string>
    <string name="menu_delete" translatable="false">Удалить</string>
    <string name="menu_share" translatable="false">Поделиться</string>
    <string name="no_tracks_in_playlist" translatable="false">В плейлист еще не добавлен\n ни один трек</string>
    <string name="delete_playlist_dialog" translatable="false">Хотите удалить плейлист?</string>
    <string name="answer_no" translatable="false">Нет</string>
    <string name="answer_yes" translatable="false">ДА</string>
    <string name="on_tracks_to_share" translatable="false">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_track_dialog" translatable="false">Хотите удалить трек?</string>
    <string name="edit_modify" translatable="false">Редактировать</string>
    <string name="save_modify" translatable="false">Сохранить</string>
</resources>
