<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            style="@style/TextSettingsStyle"
            android:padding="12dp"
            android:text="@string/settings_titel"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:padding="@dimen/pudding_all"
        >

        <TextView
            style="@style/TextSettingsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="end|center"
            android:gravity="center|start"
            android:text="@string/Dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switch"
            style="@style/SwitchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="11dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/pudding_all">

        <TextView
            style="@style/TextSettingsStyle"
            android:text="@string/Share_the_app"
            />

        <ImageView
            android:id="@+id/share_the_application"
            style="@style/ImageSettingsStyle"
            android:src="@drawable/mode"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/pudding_all">

        <TextView
            style="@style/TextSettingsStyle"
            android:text="@string/Write_to_support"
            />

        <ImageView
            android:id="@+id/write_to_support"
            style="@style/ImageSettingsStyle"
            android:src="@drawable/group" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/pudding_all">

        <TextView
            style="@style/TextSettingsStyle"
            android:text="@string/User_agreement"
            />

        <ImageView
            android:id="@+id/user_agreement"
            style="@style/ImageSettingsStyle"
            android:src="@drawable/light"
            />
    </LinearLayout>

</LinearLayout>



