<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="12dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <Button
            android:id="@+id/Search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search_titel"
            android:textAllCaps="false"
            android:textColor="@color/black"

            android:textSize="@dimen/text_size"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/Media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media_titel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/media"

            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/Settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings_titel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black" />


    </LinearLayout>
</LinearLayout>