<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <ImageView
        android:id="@+id/image_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/placeholder" />

    <TextView
        android:id="@+id/name_track"
        style="@style/TrackNameStily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@id/image_track"
        android:layout_toStartOf="@id/button_treack"
        android:text="@string/name_track" />

    <TextView
        android:id="@+id/artist_name"

        style="@style/TrackTimeAndArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_track"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="14dp"
        android:layout_toEndOf="@id/image_track"
        android:text="@string/artist_name" />

    <ImageView
        android:id="@+id/point_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/artist_name"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@id/artist_name"
        android:src="@drawable/ic"

        />

    <TextView

        android:id="@+id/time_track"
        style="@style/TrackTimeAndArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/artist_name"
        android:layout_toEndOf="@id/point_view"
        android:text="@string/time_track" />

    <ImageView
        android:id="@+id/button_treack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="12dp"
        android:src="@drawable/light" />


</RelativeLayout>
